commented out client CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(serverAndClient)
 add_compile_options(-std=c++11)
 
 add_subdirectory(server)
-add_subdirectory(client)
+#add_subdirectory(client)
