added tests to CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,8 @@ project(serverAndClient)
 
 add_compile_options(-std=c++11)
 
-add_subdirectory(server)
+#add_subdirectory(server)
 #add_subdirectory(client)
+
+# Tests:
+add_subdirectory(tests)
