formatted CMake using cmake_format

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -18,5 +18,4 @@ add_executable(
   ./commands/UploadCommand.cpp
   ./commands/ClassifyCommand.cpp
   ./commands/SettingsCommand.cpp
-  DataManager.cpp
-)
+  DataManager.cpp)
