fixed compilation problem

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -7,6 +7,8 @@ Client.cpp
 ../utils/InputValidator.cpp
 ../utils/StringFunctions.cpp
 ../utils/Reader.cpp
+../utils/Writer.cpp
+
 
 # IO
 ../IO/StandardIO.cpp
