--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -25,6 +25,7 @@ add_executable(
   ../server/commands/DisplayCommand.cpp
   ../server/commands/ConfusionMatrixCommand.cpp
   ../server/commands/DownloadCommand.cpp
+  ../server/commands/ExitCommand.cpp
 
   # Classifier
   ../classifier/Classifier.cpp
